--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="Access-Control-Allow-Origin" content="*">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="一个默默无闻的主页" />
-  <meta name="keywords" content="無名,个人主页" />
-  <meta name="author" content="無名" />
+  <meta name="description" content="longli's space" />
+  <meta name="keywords" content="longli's space" />
+  <meta name="author" content="longli" />
   <meta name="theme-color" content="#424242" />
   <title><%- title %></title>
   <!-- HarmonyOS Sans -->
@@ -23,16 +23,6 @@
     if ( /*@cc_on!@*/ false || (!!window.MSInputMethodContext && !!document.documentMode))
       window.location.href =
       "https://support.dmeng.net/upgrade-your-browser.html?referrer=" + encodeURIComponent(window.location.href)
-  </script>
-  <!-- 百度统计 -->
-  <script>
-    var _hmt = _hmt || [];
-    (function () {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?14e9f35ff8bc67fd4bcb5f07a6e6655a";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
-    })();
   </script>
 </head>
 
