--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <meta name="keywords" content="longli's space" />
   <meta name="author" content="longli" />
   <meta name="theme-color" content="#424242" />
-  <meta name="baidu-site-verification" content="codeva-33Id44KYQB" />
+  <meta name="baidu-site-verification" content="codeva-ec0s0fhOYk" />
+
   <title><%- title %></title>
   <!-- HarmonyOS Sans -->
   <!-- 本站 CDN 已开启防盗链，非本站域名不可访问，请更改链接为下方内容，否则自定义字体将失效 -->
